Adds app container and app header styling

--- a/instagram-clone/src/App.css
+++ b/instagram-clone/src/App.css
@@ -3,7 +3,13 @@
 }
 
 .app {
-  color: red;
+  background-color: hsl(0 0% 98%);
+  height: 100vh;
+}
+
+.app__header {
+  background-color: white;
+  height: 10vh;
 }
 
 .app__headerImage {
