--- a/instagram-clone/src/Post.css
+++ b/instagram-clone/src/Post.css
@@ -1,8 +1,21 @@
+.post__header {
+    display: flex;
+    align-items: center;
+}
+
+
 .post__image {
     object-fit: contain;
     width: 100%;
+    max-width: 600px;
 }
 
 .post__text {
     font-weight: normal;
+    font-size: 14px;
+    padding: .5em;
+}
+
+.post__avatar {
+    margin: .5rem;
 }
