--- a/instagram-clone/src/App.css
+++ b/instagram-clone/src/App.css
@@ -11,6 +11,9 @@
   background-color: white;
   height: 5.5vh;
   border: 1px solid hsl(0 0% 85%);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .app__headerImage {
@@ -18,7 +21,7 @@
   height: 56%;
   max-height: 100%;
   max-width: 100%;
-  padding: 1em 1em 0 1em;
+  padding-left: 1em;
 }
 
 .app__signup {
