--- a/instagram-clone/src/Post.css
+++ b/instagram-clone/src/Post.css
@@ -12,6 +12,7 @@
 .post__image {
     object-fit: contain;
     width: 100%;
+    /* max-height: 1000px; */
     /* 
     border-top: 1px solid hsl(0 0% 85%);
     border-bottom: 1px solid hsl(0 0% 85%);
