--- a/instagram-clone/src/App.css
+++ b/instagram-clone/src/App.css
@@ -30,5 +30,12 @@
 }
 
 .app__posts {
+  background-color: inherit;
   padding: 1.2rem;
+  display: flex;
+  justify-content: center;
+}
+
+.app__postsRight {
+  margin-left: 38px;
 }
