--- a/instagram-clone/src/Post.css
+++ b/instagram-clone/src/Post.css
@@ -29,5 +29,26 @@
     margin: .5rem;
 }
 
+.post__input {
+    outline: none;
+    border: none;
+    padding-left: .5em;
+}
+
+.post__button {
+    outline: none;
+    border: none;
+    background-color: inherit;
+    padding: 0;
+    font-family: inherit;
+    font-weight: bold;
+    color: hsl(203, 94%, 85%);
+}
+
+/* .post__button:hover {
+    cursor: pointer;
+    color:hsl(203, 94%, 50%);
+} */
+
 /* media query at 1000px */
 /* media query at 735px */
