--- a/instagram-clone/src/Post.css
+++ b/instagram-clone/src/Post.css
@@ -29,10 +29,18 @@
     margin: .5rem;
 }
 
+.post__commentBox {
+    display: flex;
+    margin-top: 1rem;
+    border-top: 1px solid hsl(0, 0%, 93%);
+    padding: 1em;   
+}
+
 .post__input {
     outline: none;
     border: none;
     padding-left: .5em;
+    flex: 1;
 }
 
 .post__button {
@@ -43,6 +51,7 @@
     font-family: inherit;
     font-weight: bold;
     color: hsl(203, 94%, 85%);
+    flex: 0;
 }
 
 /* .post__button:hover {
