Comment section styled and retrieves data (post function not set up yet)

--- a/instagram-clone/src/Post.css
+++ b/instagram-clone/src/Post.css
@@ -54,6 +54,10 @@
     flex: 0;
 }
 
+/* .post__comments {
+    
+} */
+
 /* .post__button:hover {
     cursor: pointer;
     color:hsl(203, 94%, 50%);
